--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@ layout: default
 title: {{ site.name }}
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
+<div id="blog">
+  <h1>Latest Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+
+  <h1>Features and architecture</h1>
+
+  <h1>Screenshots</h1>
+  
 </div>
